--- a/index.css
+++ b/index.css
@@ -614,6 +614,12 @@ footer .flex-item ul li a:hover{
     nav .flex-item-2 {
         visibility: hidden;
     }
+    
+    .footer-social li a svg:hover{
+    outline: 9px solid lightgrey;
+    border-radius: 50%;
+
+}
 }
 
 @media screen and (max-width: 500px){
